src/objects/Legal_Documents__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LD00 REJ</fullName>
                </value>
                <value>
                    <fullName>LD01 SAE</fullName>
                    <default>true</default>
                    <label>LD01 SAE</label>
                </value>
                <value>
                    <fullName>LD02 OPS</fullName>
                </value>
                <value>
                    <fullName>LD03 CFO</fullName>
                    <label>LD03 CXO</label>
                </value>
                <value>
                    <fullName>LD04 SVP</fullName>
                </value>
                <value>
                    <fullName>LD05 LEG</fullName>
                </value>
                <value>
                    <fullName>LD06 FIN</fullName>
                </value>
                <value>
                    <fullName>LD07 CST</fullName>
                </value>
                <value>
                    <fullName>LD08 SIG</fullName>
                </value>
                <value>
                    <fullName>LD09 EXE</fullName>
                </value>
                <value>
                    <fullName>V00 - REJ</fullName>
                </value>
                <value>
                    <fullName>V01 - BIZ</fullName>
                </value>
                <value>
                    <fullName>V02 - PRO</fullName>
                </value>
                <value>
                    <fullName>V03 - CXO</fullName>
                </value>
                <value>
                    <fullName>V04 - LEG</fullName>
                </value>
                <value>
                    <fullName>V05 - VEN</fullName>
                </value>
                <value>
                    <fullName>V06 - SIG</fullName>
                </value>
                <value>
                    <fullName>V07 - EXE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Discount_End_Date__c</fullName>
        <label>Support Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Discount_Start_Date__c</fullName>
        <label>Support Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Discount__c</fullName>
        <label>Support Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TAS_Discount_End_Date__c</fullName>
        <label>TAS Discount End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAS_Discount_Start_Date__c</fullName>
        <label>TAS Discount Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TAS_Discount__c</fullName>
        <label>TAS Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Terms__c</fullName>
        <description>Non-standard terms relating to the sale and provision of technical support, e.g., future price guarantees on subscription renewals, partial lapse of support, non-standard support response times.</description>
        <inlineHelpText>Non-standard terms relating to the sale and provision of technical support, e.g., future price guarantees on subscription renewals, partial lapse of support, non-standard support response times.</inlineHelpText>
        <label>Technical Support Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Clause__c</fullName>
        <label>Termination Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theatre_F__c</fullName>
        <formula>Account__r.District__r.Territory__r.Region__r.Theatre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theatre F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USD Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_Comments__c</fullName>
        <label>Upload Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Document_ID__c</fullName>
        <displayFormat>VLD-{000000}</displayFormat>
        <label>Vendor Document ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Vendor_Document_Submitter_CXO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Document Submitter CXO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Documents_Submitter_CXO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Document_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Document Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Documents_Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Legal Documents</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Negotiated_Legal_Documents</fullName>
        <filterScope>Queue</filterScope>
        <label>Contracts Negotiated</label>
        <queue>Contracts_Negotiated</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Approvers_Legal_Documents</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Approvers</label>
        <queue>Legal_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Legal_Documents_Pending_Legal_Approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Legal_Representative__c</columns>
        <columns>DocumentType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted; Pending Legal Approval,Business Approved; Pending Legal Approval,Pending Sales Clarification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>LD05 LEG</value>
        </filters>
        <label>Legal Documents Pending Legal Approval</label>
    </listViews>
    <listViews>
        <fullName>Legal_Documents_Pending_Legal_NAM</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Legal_Representative__c</columns>
        <columns>LegalReviewPriority__c</columns>
        <columns>Justification__c</columns>
        <columns>DocumentType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted; Pending Legal Approval,Business Approved; Pending Legal Approval,Pending Sales Clarification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>LD05 LEG</value>
        </filters>
        <filters>
            <field>Legal_Representative__c</field>
            <operation>equals</operation>
            <value>Legal NAM Queue ()</value>
        </filters>
        <label>Legal Documents Pending Legal - NAM</label>
    </listViews>
    <listViews>
        <fullName>Legal_Documents_Pending_Rev_Rec_Approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Rev_Rec_Representative__c</columns>
        <columns>DocumentType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Legal Approved; Pending Rev Rec Approval</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>LD06 FIN</value>
        </filters>
        <label>Legal Documents Pending Rev Rec Approval</label>
    </listViews>
    <listViews>
        <fullName>Legal_Vendor_Queue_Legal_Documents</fullName>
        <filterScope>Queue</filterScope>
        <label>Legal Vendor Queue</label>
        <queue>Legal_Vendor_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Procurement_Vendor_Queue_Legal_Documents</fullName>
        <filterScope>Queue</filterScope>
        <label>Procurement Vendor Queue</label>
        <queue>Procurement_Vendor_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rev_Rec_Approvers_Legal_Documents</fullName>
        <filterScope>Queue</filterScope>
        <label>Rev Rec Approvers</label>
        <queue>Rev_Rec_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Legal Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Documents</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <label>Legal Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy</fullName>
        <active>true</active>
        <label>Legacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_App_Submitted_for_Signature</fullName>
        <active>true</active>
        <label>Pending App Submitted for Signature</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_Legal_Approval</fullName>
        <active>true</active>
        <label>Pending Legal Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_Rec_Rev_Approval</fullName>
        <active>true</active>
        <label>Pending Rec Rev Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted</fullName>
        <active>true</active>
        <label>Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Document</fullName>
        <active>true</active>
        <label>Vendor Document</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Justification_is_required_for_P1_and_P2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(LegalReviewPriority__c, &quot;P1 - Highest&quot;),
ISPICKVAL(LegalReviewPriority__c, &quot;P2 - High&quot;)
),

ISBLANK(Justification__c)
)</errorConditionFormula>
        <errorMessage>Justification is required for P1 and P2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LC_LOE_should_be_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( LC_LOE__c),
LC_LOE__c&lt;0
)</errorConditionFormula>
        <errorMessage>The number of hours spent cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_LC_Hours_can_only_be_edited_by</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( LC_LOE__c ),
Legal_Representative__c != $User.Id
)</errorConditionFormula>
        <errorMessage>The number of hours spent in legal review is editable by the assigned Legal Representative only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Legal_team_can_edit_Legal_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Legal_CAF_Comments__c),
ISPICKVAL(Status__c,&apos;Pending Legal Review&apos;),
!$Permission.Legal_Comments_Update)</errorConditionFormula>
        <errorMessage>Only Legal team has the access to edit Legal CAF Comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Rev_Rec_team_canedit_Rev_Rec_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Rev_Rec_CAF_Comments__c),
ISPICKVAL(Status__c, &quot;Pending Rev Rec Review&quot;),
!$Permission.Rev_Rec_Comments_Update 
)</errorConditionFormula>
        <errorMessage>Only Rev Rec team has the access to edit Rev Rec CAF Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_field_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name=&apos;Submitted&apos;,
OR(
ISCHANGED(Other_Enterprise_Terms__c),
ISCHANGED(Technical_Support_Terms__c),
ISCHANGED(License_Terms__c),
ISCHANGED(SBCF_No_Name_Logo_Rights__c),
ISCHANGED(SBCF_No_Press_Rights__c),
ISCHANGED(SBCF_Broaden_License_Grant__c),
ISCHANGED(SBCF_Reimbursement_Not_Required__c),
ISCHANGED(SBCF_No_PEP_auto_renew__c),
ISCHANGED(SBCF_No_Technical_Support_Auto_Renew__c),
ISCHANGED(Right_to_Terminate_and_Refund__c),
ISCHANGED(Services_Terms__c),
ISCHANGED(Pricing_Payment_and_Invoicing_Terms__c)
)
)</errorConditionFormula>
        <errorMessage>Please Recall the Approval request to make modifications to the Terms of the Legal Document and Re-submit the Approval request</errorMessage>
    </validationRules>
</CustomObject>